* Replaced `authorization` in the default value of `sanitize_field_names` with `*auth*` - {pull}2326[#2326]
* Unsampled transactions are dropped and not sent to the APM-Server if the APM-Server version is 8.0+ - {pull}2329[#2329]
* Adding agent logging capabilities to our SDK, making it available for external plugins - {pull}2390[#2390]

[float]
===== Bug fixes
* Fix runtime attach with some docker images - {pull}2385[#2385]
* Restore dynamic capability to `log_level` config for plugin loggers - {pull}2384[#2384]
* Fix slf4j-related `LinkageError` - {pull}2390[#2390] and {pull}2376[#2376]
* Fix possible deadlock occurring when Byte Buddy reads System properties by warming up bytecode instrumentation code
paths. The BCI warmup is on by default and may be disabled through the internal `warmup_byte_buddy` config option - {pull}2368[#2368]
* Fixed few dubbo plugin issues - {pull}2149[#2149]
** Dubbo transaction will should be created at the provider side
** APM headers conversion issue within dubbo transaction
* Fix External plugins automatic setting of span outcome - {pull}2376[#2376]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.28.4]]
==== 1.28.4 - 2021/12/30

[float]
===== Bug fixes
* Fix `@Traced` annotation to return proper outcome instead of `failed` - {pull}2370[#2370]

[float]
===== Dependency updates
* Update Log4j to 2.12.4 and log4j2-ecs-layout to 1.3.2 - {pull}2378[#2378]

[[release-notes-1.28.3]]
==== 1.28.3 - 2021/12/22

[float]
===== Dependency updates
* Update Log4j to 2.12.3
* Update ecs-logging-java to 1.3.0

[float]
===== Potentially breaking changes
* If the agent cannot discover a service name, it now uses `unknown-java-service` instead of `my-service` - {pull}2325[#2325]

[float]
===== Bug fixes
* Gracefully handle JDBC drivers which don't support `Connection#getCatalog` - {pull}2340[#2340]
* Fix using JVM keystore options for communication with APM Server - {pull}2362[#2362]

[[release-notes-1.28.2]]