@@ -497,6 +497,7 @@ NOTE: Service name auto discovery mechanisms require APM Server 7.0+.
 | For Spring-based application, uses the `spring.application.name` property, if set.
 For Servlet-based applications, uses the `display-name` of the `web.xml`, if available.
 Falls back to the servlet context path the application is mapped to (unless mapped to the root context).
+Falls back to the `Implementation-Title` in the `MANIFEST.MF` file.
 Falls back to the name of the main class or jar file.
 If the service name is set explicitly, it overrides all of the above.
  | String | false
@@ -2891,6 +2892,7 @@ The default unit for this option is `ms`.
 # Default value: For Spring-based application, uses the `spring.application.name` property, if set.
 # For Servlet-based applications, uses the `display-name` of the `web.xml`, if available.
 # Falls back to the servlet context path the application is mapped to (unless mapped to the root context).
+# Falls back to the `Implementation-Title` in the `MANIFEST.MF` file.
 # Falls back to the name of the main class or jar file.
 # If the service name is set explicitly, it overrides all of the above.
 # 
